[package]
name = "multi"
version = "0.1.1"
edition = "2021"
description = "An easy way to run multiple commands in parallel"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.68"
